--- a/login.html
+++ b/login.html
@@ -131,7 +131,6 @@ span.psw {
 <h2>Modal Login Form</h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-<button style="width:auto;">GTP</button>
 
 <div id="id01" class="modal">
   
@@ -149,7 +148,7 @@ span.psw {
       <input type="password" placeholder="Enter Password" name="psw" required>
         
       <button type="submit">Login</button>
-      
+      <button type="submit">Hung</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
