--- a/login.html
+++ b/login.html
@@ -149,6 +149,7 @@ span.psw {
         
       <button type="submit">Login</button>
       <button>Đinh Tiên Hoàng</button>
+      <button>Tuan</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
@@ -180,8 +181,4 @@ window.onclick = function(event) {
 </script>
 
 </body>
-<<<<<<< HEAD
-<!DOCTYPE html>
-=======
 </html>
->>>>>>> b39eb5d255dbcc7277a84bb86166721326f79574
