--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Index</title>
 </head>
 <body>
-    <H1>Chao mung ban den website cua minh</H1>
+    <H1>Chao mung ban den website cua Minh Minh</H1>
 </body>
 </html>
