minh minh vua fix xong

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <H1>Chao mung ban den website cua Minh Minh</H1>
+    <H1 style="color: red;">Chao mung ban den website cua Minh Minh</H1>
+    <H1 style="color: green">Chao mung ban den website cua Minh Minh</H1>
 </body>
 </html>
