them title gioi thieu

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Index</title>
 </head>
 <body>
-    <H1>Chao mung ban den website cua minh</H1>
+    <H1>Chao mung ban den website cua Minh Minh</H1>
+    <h1>hello, my name is Hung</h1>
 </body>
 </html>
