man hinh dang nhap/LLinh

--- a/index.html
+++ b/index.html
@@ -7,18 +7,12 @@
     <title>Index</title>
 </head>
 <body>
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <H1>Chao mung ban den website cua minh</H1>
-    <H1>Chfsdsd</H1>
-=======
-    <H1>Chao mung ban den website cua Minh Minh</H1>
->>>>>>> main
-=======
     <H1>Chao mung ban den website cua minh</H1>
     <H2>Phuonggtp</H2>
     <H1>Chao mung ban den website cua Minh Minh</H1>
     <h1>hello, my name is Hung</h1>
->>>>>>> main
+    <button>
+        <a href="file:///Users/lelinh/Documents/bt/index.html">LLINh</a>
+    </button>
 </body>
 </html>
