--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
     <H1>Chao mung ban den website cua minh</H1>
     <H2>Phuonggtp</H2>
     <H1>Chao mung ban den website cua Minh Minh</H1>
-<<<<<<< HEAD
     <h1>hello, my name is Hung</h1>
     <button>
-        <a href="file:///Users/lelinh/Documents/bt/index.html">LLINh</a>
+        <a href="dangnhap.html">LLINh</a>
     </button>
-=======
     <h1>hello, my name is Hung</h1><br>
 
     <button> <a href="loginDemo.html">button cua Hung</a> </button>
->>>>>>> main
 </body>
 </html>
