--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <H1>Chao mung ban den website cua minh</H1>
     <h3>Vu Dnh Duan</h3>
     <H1>Chao mung ban den website cua Minh Minh</H1>
-    <h3>Vu Dinh Duan</h3>
+    <h3>hello.Tôi là Vũ Đình Duẩn</h3>
 </body>
 </html>
