--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Index</title>
 </head>
 <body>
+    <H1>Chao mung ban den website cua minh</H1>
+    <H2>Phuonggtp</H2>
     <H1>Chao mung ban den website cua Minh Minh</H1>
     <h3>Vu Dinh Duan</h3>
+    <h1>hello, my name is Hung</h1><br>
+    <h2>xin chao, toi la ten la Duan</h2>
+
+    <button> <a href="loginDemo.html">button cua Hung</a> </button>
 </body>
 </html>
