Đây là bài của Hoàng

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <title>Index</title>
 </head>
 <body>
+    <style>
+        a.btnsignup{
+            padding: 8px 16px;
+            background-color: #03c883;
+            text-decoration: none;
+            border-radius: 20px;
+        }
+    </style>
     <H1>Chao mung ban den website cua minh</H1>
     <h1>Kính thưa quan viên hai họ</h1>
     <H1>Chao mung ban den website cua Minh Minh</H1>
+    <a href="signuphoangdt.html" class="btnsignup">Đinh Tiên Hoàng</a>
 </body>
 </html>
