fix link button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <H1>Chao mung ban den website cua Minh Minh</H1>
     <h1>hello, my name is Hung</h1><br>
 
-    <button> <a href="loginDemo.html">button cua Hung</a> </button>
+    <button> <a href="w3s_index.html">button cua Hung</a> </button>
 
 </body>
 </html>
